--- a/gb/20/8/27/n12362005.md
+++ b/gb/20/8/27/n12362005.md
@@ -1,17 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uemdlg368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】毛泽东推崇的外国“英雄”白求恩</h2>
-<a href="https://git.io/JUxCK"><img width="600" src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dn3dhcszbgs9s.cloudfront.net/R6rH9FkPs"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>白求恩出生在基督教长老会之家，学有所成。成年后背离神，酗酒嫖娼，后加入共产党成为无神论者，生为中共操刀，死被用来洗脑。（公有领域／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年08月27日讯】上一集说了<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>“<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>”中的张思德，今天说说另一篇中的外国人<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E7%99%BD%E6%B1%82%E6%81%A9.md#1">白求恩</a>。</p>
-<p>对很多中国人而言，诺尔曼·<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E7%99%BD%E6%B1%82%E6%81%A9.md#1">白求恩</a>的名字并不陌生，因为<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>撰写的《纪念白求恩》在文革期间，是人人都要背诵的“<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>”中的一篇，所以当时白求恩家喻户晓。按照毛的说法，白求恩是“一个高尚的人，一个纯粹的人，一个有道德的人，一个脱离了低级趣味的人，一个有益于人民的人”。然而，白求恩真是这样的人吗？</p>
-<p><center><a src=""></a><a href="https://git.io/JUxCK"><img width="600" src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/BDzapcT7G9c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>白求恩1890年出生在<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>安大略省的格雷文赫斯特，曾祖父和父亲都是基督教长老会的牧师，连白求恩的故居也是当地基督教会为牧师盖的住所。他母亲也是一名虔诚的基督教长老会传教士，10岁就在故乡伦敦散发基督教小册子，21岁离开英国到夏威夷传教，结识了白求恩的父亲。</p>
+	<p>【大纪元2020年08月27日讯】上一集说了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>”中的张思德，今天说说另一篇中的外国人<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%99%BD%E6%B1%82%E6%81%A9.md#1">白求恩</a>。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/9c9d9e29-dd63-4d14-8a25-21f16e1809b9" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多新闻请至<ahref="https://github.com/hxcaik307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>对很多中国人而言，诺尔曼·<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%99%BD%E6%B1%82%E6%81%A9.md#1">白求恩</a>的名字并不陌生，因为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>撰写的《纪念白求恩》在文革期间，是人人都要背诵的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%80%81%E4%B8%89%E7%AF%87.md#1">老三篇</a>”中的一篇，所以当时白求恩家喻户晓。按照毛的说法，白求恩是“一个高尚的人，一个纯粹的人，一个有道德的人，一个脱离了低级趣味的人，一个有益于人民的人”。然而，白求恩真是这样的人吗？</p>
+<p><center><a src=""></a><a href="https://dn3dhcszbgs9s.cloudfront.net/R6rH9FkPs"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/BDzapcT7G9c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>白求恩1890年出生在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>安大略省的格雷文赫斯特，曾祖父和父亲都是基督教长老会的牧师，连白求恩的故居也是当地基督教会为牧师盖的住所。他母亲也是一名虔诚的基督教长老会传教士，10岁就在故乡伦敦散发基督教小册子，21岁离开英国到夏威夷传教，结识了白求恩的父亲。</p>
 <p>两位虔诚的基督徒所组成的家庭带给白求恩说不尽的爱。白求恩也承认父母对他的非凡影响。他说：“母亲给了我一个传道家的性格”，“父亲给了我一股要行动、要干的热劲。”应该说，白求恩从小就沐浴在对神的信仰和西方传统文明的氛围中。</p>
 <p>白求恩毕业于多伦多大学医学院，后来成为王家维多利亚医院的临床研究生、医生。在医学院工作期间，白求恩发明了“人工气胸疗法”，在自己的身上做实验并获得成功。此外，他还发明了包括“白求恩肋骨剪”在内的22种外科手术器械，这些器械在当时处于领先的地位。因此可以说，白求恩是一个称职而且敬业的医生。</p>
-<p><ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>研究白求恩问题的专家、历史学家罗德里克·斯图尔特及夫人莎朗合作编撰的《凤凰传奇：诺尔曼·白求恩的一生》（Phoenix: The Life of Norman Bethune）一书，也生动地讲述了主人公的另一面：真实的白求恩除了医术精湛，还沉溺女色、性情暴戾。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>研究白求恩问题的专家、历史学家罗德里克·斯图尔特及夫人莎朗合作编撰的《凤凰传奇：诺尔曼·白求恩的一生》（Phoenix: The Life of Norman Bethune）一书，也生动地讲述了主人公的另一面：真实的白求恩除了医术精湛，还沉溺女色、性情暴戾。</p>
 <p>书中写道，1923年，白求恩成为英国王家外科医学院的临床研究生。此时，他遇见了小他11岁的苏格兰姑娘弗朗西丝·坎贝尔·彭尼，尽管性格迥异，但在喜欢冒险的白求恩固执而疯狂的追求下，同年8月13日，弗朗西丝不顾家人的反对，与白求恩在英国伦敦举行了婚礼。</p>
 <p>1926年，白求恩得了肺结核，他认为自己快死了，就强迫妻子与他离婚。“除非你同意跟我离婚，否则我决不到疗养院去治疗。”可能外人无法探究白求恩当年迫使弗朗西丝与他离婚的真正原因，但据白求恩故居所提供的短片介绍，此时的白求恩生活相当放荡，酗酒、抽烟，晚上参加各种欢聚，生活相当没有节制。</p>
 <p>1929年秋天，病愈后的白求恩哀求远在苏格兰的前妻回到他身边来，后来他们在蒙特利尔复婚了。可没两年，白求恩故态复萌。1931年早春，他们的婚姻再次走进死胡同。</p>
@@ -31,49 +34,48 @@
 <h2>加拿大首位华裔女医生张肖白死于文革前</h2>
 <p>张肖白被加拿大基督教长老会女子传道会派到广东江门的巴克莱妇幼医院工作（也叫仁济医院，是现在江门中心医院的前身）。江门几代人都对她有深刻的记忆。所幸，张肖白在文革十年浩劫前夕有尊严的离世。葬礼那天，江门四乡民众赶来为张医生送殡，队伍绵延数公里。</p>
 <p>相比较而言，白求恩无论如何都算不上“一个高尚的人，一个纯粹的人，一个有道德的人，一个脱离了低级趣味的人”，而是“一个有益于中共的人”。因为，中华民族在国民政府领导下浴血抗战之际，中共却龟缩在抗战后方延安，借机壮大自己，并最终夺取了政权，为祸中国至今。这也就难怪加拿大共产党员白求恩为什么会成为中共的“英雄模范人物”。</p>
-<p>《欺世大观》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/【欺世大观】.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊＃</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/6/11/n7986316.md#1">林辉：还原中共“英雄模范人物”之白求恩</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/8/31/n9587152.md#1">林辉：中共加强洗脑 中小学新增课文谎言多</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/5/10/n11248166.md#1">【征文】袁斌：中共是怎么炮制“英雄人物”的</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/10/6/n11571385.md#1">林辉：中共70年来宣传的英雄人物之真面目</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/11/n7986316.md#1">林辉：还原中共“英雄模范人物”之白求恩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/31/n9587152.md#1">林辉：中共加强洗脑 中小学新增课文谎言多</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/10/n11248166.md#1">【征文】袁斌：中共是怎么炮制“英雄人物”的</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/6/n11571385.md#1">林辉：中共70年来宣传的英雄人物之真面目</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/15/n10394634.md#1" target="_blank">共产暴政录：抢教堂庙宇的献堂献庙</a></li><li><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">修炼人的故事：从地狱到天堂</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450997.md#1">大千世界无奇不有 人死去百年竟能复活</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456300.md#1">【西岸观察】川普为何不怕中共病毒？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12458120.md#1">【新闻看点】蓬佩奥四方会谈神秘 测中共底线？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455085.md#1">【纽约调查】中领馆谍影重重 伪装民间团体</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450596.md#1">【最新疫情10.5】川普已经回到白宫</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454388.md#1">华春莹酸川普医疗待遇特殊 网民拿习近平说事</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/2/n12448868.md#1">【独家】吉林省委书记出国推销敏感服务</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12450929.md#1">《艾蜜莉在巴黎》影评：莉莉柯林斯大放异彩 将好故事发扬光大</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12452790.md#1">刘德华黄历生日 捧大盆红鸡蛋庆祝</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12451602.md#1">无人机拍到惊人照片：心形鲑鱼群包围鲨鱼</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12451754.md#1">中共官媒谎称：台士兵一半不识字 开战就投降</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456850.md#1">为什么F-22这么先进的战机仍配备机炮？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12451880.md#1">从意大利到英国 10岁男童走2800公里去看奶奶</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12362005.htm">【欺世大观】毛泽东推崇的外国“英雄”白求恩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12362005.htm">【欺世大观】毛泽东推崇的外国“英雄”白求恩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uemdlg368/djy/blob/master/gb/20/8/27/n12362005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/27/n12362005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
