--- a/gb/20/9/26/n12431823.md
+++ b/gb/20/9/26/n12431823.md
@@ -1,27 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ikjcru315/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ikjcru315/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ikjcru315/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ikjcru315/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ikjcru315/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ikjcru315/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ikjcru315/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ikjcru315/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】《林海雪原》杨子荣PK座山雕（下）</h2>
-<a href="https://git.io/JTvdV"><img width="600" src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ikjcru315/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2iiqnrx4rrboe.cloudfront.net/G4tbh3Urt"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>《林海雪原》颠倒抗日英雄！杨子荣与座山雕如何产生交集？杨对共产党是忠心还是别有用心？他欺骗诱捕国军抗日将领谢文东，又遭何报应？（公有领域／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2020年09月26日讯】欢迎您再次光临【<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】。</p>
-<p><ahref=><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/9/23/n12423794.md#1">接上文</a></p>
-<p>书接共产党英雄<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E6%9D%A8%E5%AD%90%E8%8D%A3.md#1">杨子荣</a>。资料显示，杨子荣，1917年出生，山东牟平县城南峡河人。4岁随家长去安东（今辽宁丹东）谋生。后来因生活艰难，父亲和姐姐留下，母亲又领着他回了山东老家，省吃俭用供杨子荣读了几年私塾。</p>
-<p>1929年<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E6%9D%A8%E5%AD%90%E8%8D%A3.md#1">杨子荣</a>12岁的时候，母亲安排他再去安东投靠父亲。1931年九一八事变，日本占领东北前后十多年间，他在那里讨生活，七七八八干过不少杂活，1943年到鞍山当采矿工。一次日本监工鞭打工友他看不过，夺下皮鞭打了工头，之后只好逃回山东老家。</p>
-<p><center><a src=""></a><a href="https://git.io/JTvdV"><img width="600" src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ikjcru315/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/2nDgvD9-ArY" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>按照中共说法，杨子荣在山东曾加入中共民兵组织，此时已是抗战后期，基本没有大型战役，中共党史对此时的杨语焉不详，只是称他“积极参与抗日斗争，打击日伪军”。既没事实数据也没战友作证，谁也不知道杨到底如何抗的日，打过几个鬼子，哪怕抽冷子打了几个伪军，还是根本就是编故事？</p>
-<p>老谢（谢文东，<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E5%BA%A7%E5%B1%B1%E9%9B%95.md#1">座山雕</a>的原型）就算降过鬼子，有污点，杀鬼子无数也是真的吧，杨戴上“积极参加抗日”高帽，就是<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5%E8%8B%B1%E9%9B%84.md#1">抗日英雄</a>了吗？喊过那句口号之后，笔杆子们都躲了猫猫，接下来就开始说他娘怎么给他娶媳妇，过小日子，再下一句就跳到抗战结束了。抗日英雄事迹呢，对不起，那个没啥要说的，翻篇儿。</p>
+	<p>【大纪元2020年09月26日讯】欢迎您再次光临【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】。</p>
+<p><ahref=><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/23/n12423794.md#1">接上文</a></p>
+<p>书接共产党英雄<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E5%AD%90%E8%8D%A3.md#1">杨子荣</a>。资料显示，杨子荣，1917年出生，山东牟平县城南峡河人。4岁随家长去安东（今辽宁丹东）谋生。后来因生活艰难，父亲和姐姐留下，母亲又领着他回了山东老家，省吃俭用供杨子荣读了几年私塾。</p>
+<p>1929年<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E5%AD%90%E8%8D%A3.md#1">杨子荣</a>12岁的时候，母亲安排他再去安东投靠父亲。1931年九一八事变，日本占领东北前后十多年间，他在那里讨生活，七七八八干过不少杂活，1943年到鞍山当采矿工。一次日本监工鞭打工友他看不过，夺下皮鞭打了工头，之后只好逃回山东老家。</p>
+<p><center><a src=""></a><a href="https://d2iiqnrx4rrboe.cloudfront.net/G4tbh3Urt"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/2nDgvD9-ArY" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>按照中共说法，杨子荣在山东曾加入中共民兵组织，此时已是抗战后期，基本没有大型战役，中共党史对此时的杨语焉不详，只是称他“积极参与抗日斗争，打击日伪军”。既没事实数据也没战友作证，谁也不知道杨到底如何抗的日，打过几个鬼子，哪怕抽冷子打了几个伪军，还是根本就是编故事？</p>
+<p>老谢（谢文东，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BA%A7%E5%B1%B1%E9%9B%95.md#1">座山雕</a>的原型）就算降过鬼子，有污点，杀鬼子无数也是真的吧，杨戴上“积极参加抗日”高帽，就是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5%E8%8B%B1%E9%9B%84.md#1">抗日英雄</a>了吗？喊过那句口号之后，笔杆子们都躲了猫猫，接下来就开始说他娘怎么给他娶媳妇，过小日子，再下一句就跳到抗战结束了。抗日英雄事迹呢，对不起，那个没啥要说的，翻篇儿。</p>
 <p>1945年9月，日本投降。中共党史称，为应对蒋介石发动内战的阴谋，实施“向北发展、向南防御”的战略，命令山东立即派主力部队开赴东北，解放被日本侵略者铁蹄践踏了十几年的东三省。</p>
-<p>我就纳闷它怎么那么会说：日本鬼子都投降了，用得着你去解放东三省吗？铁蹄践踏的时候很需要你解放，那时候你在哪儿？当然<ahref=><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/8/27/n12361767.md#1">张思德那集</a>我们已经说了共军在干嘛，不再揭短。</p>
-<p>那么，杨子荣与<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E5%BA%A7%E5%B1%B1%E9%9B%95.md#1">座山雕</a>又是如何产生交集的呢？</p>
+<p>我就纳闷它怎么那么会说：日本鬼子都投降了，用得着你去解放东三省吗？铁蹄践踏的时候很需要你解放，那时候你在哪儿？当然<ahref=><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/27/n12361767.md#1">张思德那集</a>我们已经说了共军在干嘛，不再揭短。</p>
+<p>那么，杨子荣与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BA%A7%E5%B1%B1%E9%9B%95.md#1">座山雕</a>又是如何产生交集的呢？</p>
 <p>鬼子一投降，共军罗荣桓部队马上到杨子荣家乡招兵扩军，28岁的杨9月参加了共军胶东海军支队，11月下旬从龙口坐船到辽宁庄河登陆，改番号东北人民自卫军辽南三纵队二支队，向北推进占地盘。1946年1月，杨子荣入党，发誓随时准备为党献身。别说，一年后，他还真就献了命。</p>
 <p>此队共军2月初到达黑龙江东部牡丹江地区的海林镇。据称座山雕就在附近。</p>
 <p>好吧，说到俩主角的人生最后时光。</p>
 <p>据杨子荣203分队的人回忆，“智取”过程是这样的：杨子荣冒充自己是另一支队伍“九彪”的人，用道上黑话与座山雕的联络人搭上了线，先被引荐给了座山雕的副官和一名连长，二人答应带他们进山；但连长对杨子荣几人不放心，为防万一想先下他们的枪，没想反而被杨子荣带的人给制服了。一起来到座山雕所在的棚子里，杨子荣突然举枪质问：为何让手下冒犯自己，坏了江湖规矩，坚持要求座山雕下山向“九彪”道歉。</p>
 <p>座山雕在江湖中有威望，觉得杨说得也有道理，为表示诚意，他枪也没带，一边穿衣服一边向手下说道：“是我们对不起人家，没办法了，去说说吧。”谁知，下得山来一看，傻了眼，等他的居然是共军。老谢痛悔大意了，日本人都奈何不得的老江湖，只能哀叹自己“打了一辈子雁，让雁啄了眼”。</p>
 <p>杨子荣利用江湖义气骗捕了座山雕，一下扬名受奖，还被中共的《东北日报》以“战斗模范杨子荣等活捉匪首座山雕”为题，做了报导渲染。</p>
-<p>然后，<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5%E8%8B%B1%E9%9B%84.md#1">抗日英雄</a>谢文东，拒绝中共劝降，1946年11月21日，谢文东父子被押解到依兰县城。23日，东北共军头目林彪还来电嘉奖了抓谢行动。12月3日，这位国民政府委任的上将总司令，竟被中共以罪大恶极的“土匪”罪名在勃利县召开公审大会，然后枪决，连上军事法庭的步骤也省了。</p>
+<p>然后，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5%E8%8B%B1%E9%9B%84.md#1">抗日英雄</a>谢文东，拒绝中共劝降，1946年11月21日，谢文东父子被押解到依兰县城。23日，东北共军头目林彪还来电嘉奖了抓谢行动。12月3日，这位国民政府委任的上将总司令，竟被中共以罪大恶极的“土匪”罪名在勃利县召开公审大会，然后枪决，连上军事法庭的步骤也省了。</p>
 <p>头天晚上，老谢看到给他拿来酒和菜，按当时风俗，他知道共产党要杀他了。他让看守找来中共合江军区司令部保卫科长王世芳，说：“我是中央国民政府任命的第十五集团军上将总司令，我老谢头儿当过抗联的军长，也参加过共产党，打过日本鬼子。历朝历代、中国、外国都讲投降不杀，优待俘虏，日本鬼子都没敢杀我，你们共产党就这样说杀就把我杀了？我抗日有功啊！”这成了老谢留在人间的遗言，他的坎坷一生停在了59岁。</p>
 <p>此后，共军作家曲波创作了反派角色，老谢几十年来被反复污名化至今，配合来拔高骗捕他的杨子荣。</p>
 <p>看官，我要说自古以来杀害忠良必遭报应，您可能会问：杨子荣遭报了吗？我告诉您：真报了。您可能不知道，其实杨子荣也死得相当“不巧”。为不冲击有些感情比较脆弱的看官，我试着用“不巧”来形容他的死法。</p>
@@ -37,49 +37,48 @@
 <p>所以不免让人质疑，小杨真入过党吗？入过怎么什么都支支吾吾呢？为什么多年后曲波拿他写了《林海雪原》，谢铁骊导演了《智取威虎山》，江青深度介入的样板戏，造成小杨身后名声大噪，被党做了洗脑工具，还是没找到真身，直到党魁之一的周恩来被美国佬大卫拿住，发生浩大的寻人工程，最后才得以验明正身？不是因为没入党太难看，赶紧内部追加个党籍贴上金箔好卖高价吧？</p>
 <p>假如杨宗贵真的入了党，那问题来了：帮规是明确要求对党忠诚，欺瞒罪不可赦，那就是骗党啊，了得吗？可小杨入党时都没向党坦白交代自己隐瞒了真名，按照现在给落马官员加装的罪过，那就是对党不老实，对组织心怀二心，对吧？如果不是他骗抓了座山雕老谢，遭了报早早死掉，混到三反、五反、镇反、文革，总有一款革命运动等着革他命，给他安上混进党内的敌特，假党员真土匪，企图颠覆新生革命政权，等等罪名，共军、公安、民兵、红卫兵一定罗织起来等着扣他头上。在哪场运动中死于非命也未可知。这样看，他骗杀了谢文东，然后早早去给他还命谢罪，说不定也算个应得的归宿。</p>
 <p>遗憾的是，杨宗贵报名参加共军时为啥谎报杨子荣，他到底是怎么想的，到今天也只能成为揭不开的谜底了。</p>
-<p>《<ahref="https://github.com/ikjcru315/djy/blob/master/gb/tag/%E3%80%90%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%80%E3%80%91.md#1">欺世大观</a>》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E3%80%90%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%80%E3%80%91.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/16/3/24/n7446851.md#1">林辉：还原中共“英雄模范”之吉鸿昌</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/16/4/12/n7546513.md#1">林辉：还原中共“英雄模范”之杨子荣</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/8/27/n12361688.md#1">【欺世大观】六四屠城 中共首脑躲在哪里？</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/8/27/n12361718.md#1">【欺世大观】董存瑞炸碉堡另有故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/24/n7446851.md#1">林辉：还原中共“英雄模范”之吉鸿昌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/4/12/n7546513.md#1">林辉：还原中共“英雄模范”之杨子荣</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/27/n12361688.md#1">【欺世大观】六四屠城 中共首脑躲在哪里？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/27/n12361718.md#1">【欺世大观】董存瑞炸碉堡另有故事</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185727.md#1" target="_blank">“石油之父”惨遭灭门（上）</a></li><li><a href="https://github.com/ikjcru315/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/3/n12450997.md#1">大千世界无奇不有 人死去百年竟能复活</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/9/30/n12441471.md#1">希腊神话故事教我们如何战胜恐惧</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/2/1/7/n162181.md#1">梦溪笔谈中的神秘现象（下）</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/2/n12448572.md#1">【成吉思汗】宽仁服众 推改革 招揽人才</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/9/28/n12436377.md#1">【美食天堂】圆白菜泡菜的简易做法 清爽脆口</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/8/27/n12361718.md#1">【欺世大观】董存瑞炸碉堡另有故事</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/8/n12462797.md#1">【远见快评】彭斯辩论总统级 哈里斯拉票员？</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12460216.md#1">【远见快评】蓬佩奥台海表态 习武统窗口期被废</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12460441.md#1">川普：疫情是中共的错 中共将付沉重代价</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12458598.md#1">田云：拜登忽提取消第二场辩论 为什么？</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/6/n12458026.md#1">赵薇连输102场官司 将连带赔偿逾8千万元</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12460202.md#1">赵丽颖为冯绍峰庆生 甜喊昵称秀恩爱</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12459794.md#1">李爱绮浴室重摔倒地不起 庆幸及时被发现送医</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12460634.md#1">大陆综艺节目又翻车 女星抹口红吻海豚挨轰</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/6/n12457902.md#1">日知名女星广濑铃染疫 拍戏大规模筛检惊确诊</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12459977.md#1">癌症是糖类病？避开“黄金3恶”不让癌上身</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/9/n12463951.md#1">中共威胁没用 印度网民狂推中华民国国旗</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12458966.md#1">陈水扁曝：凯达格兰大道差点变玛丽莲梦路</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/6/n12458170.md#1">隐瞒共产党员身份的后果和豁免的条件 ——杨建利博士入籍案分析</a></li>
-<li><a href="https://github.com/ikjcru315/djy/blob/master/gb/20/10/7/n12459223.md#1">身如747 美国家公园胖熊比赛冠军出炉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ikjcru315/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ikjcru315/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/26/n12431823.htm">【欺世大观】《林海雪原》杨子荣PK座山雕（下）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/26/n12431823.htm">【欺世大观】《林海雪原》杨子荣PK座山雕（下）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ikjcru315/djy/blob/master/gb/20/9/26/n12431823.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ikjcru315/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ikjcru315/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ikjcru315/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ikjcru315/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikjcru315/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/26/n12431823.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
